
@startuml
left to right direction
'skinparam classAttributeIconSize 0

'========================
' Core domain
'========================
class Vehicle {
  # brand: String
  # model: String
  # year: String
  # licensePlate: String
  # vin: String
  # MOTValidTill: Date
  # odometerKm: Double
  # seats: Int
  # color: String
  # status: VehicleStatus
  # category: VehicleCategory
  # costPerDay: Double
  # engineType: EngineType
  # zeroToHundred: Double
  # reviewStars: Double
}

class VehicleTcoData {
  # acquisitionCost: Double
  # currentMarketValue: Double
  # maintenanceCosts: Double
  # fuelConsumptionPer100Km: Double
  # fuelPricePerLiter: Double
  # insuranceCostsPerYear: Double
  # taxAndRegistrationPerYear: Double
  # yearsOwned: Int
}

class Reservation {
  # startDate: LocalDate
  # endDate: LocalDate
  # totalCost: Double
  # status: ReservationStatus
  # totalCost: Double
  # paid: Boolean
  # createdAt: LocalDate
}

class DrivingReport {
  # safetyScore: Double
  # date: LocalDate
}

class Violation {
  # description: String
  # score: Double
}

class User {
  # userName: String
  # email: String
  # firstName: String
  # middleName: String
  # lastName: String
  # dateOfBirth: Date
  # password: String
  # createdAt: Instant
}

class VehicleImage {
  - url: String
  - number: Int
}

class VehicleLocation {
  + latitude: Decimal
  + longitude: Decimal
  + address: String
}

'========================
' Enums
'========================
enum EngineType {
  PETROL
  DIESEL
  ELECTRIC
  HYBRID
}

enum VehicleStatus {
  Active
  InService
  InMaintenance
}

enum VehicleCategory {
  SEDAN
  SUV
  HATCHBACK
  CONVERTIBLE
  COUPE
  WAGON
  VAN
  TRUCK
}

enum ReservationStatus {
  Pending
  Confirmed
  Active
  Completed
  Cancelled
}

'========================
' Associations (lines)
'========================
Vehicle o-- "0..*" Reservation : reservations
Vehicle o-- "0..*" VehicleImage : images
Vehicle --> "1" User : owner
Vehicle --> "1" VehicleLocation : currentLocation
Vehicle *-- "0..1" VehicleTcoData : TCO

Reservation --> "1" Vehicle : vehicle
Reservation --> "1" User : renter
Reservation *-- "0..*" DrivingReport : drivingReports

DrivingReport *-- "0..*" Violation: violations

'========================
' Enum dependencies (lines from classes to enums)
'========================
Vehicle ..> VehicleStatus : status
Vehicle ..> VehicleCategory : category
Vehicle ..> EngineType : engineType
Reservation ..> ReservationStatus : status

@enduml